[gd_scene load_steps=13 format=3 uid="uid://dwu5ght5dpdp4"]

[ext_resource type="Texture2D" uid="uid://4uiu7ytcqdqo" path="res://assets/01_Sprites/01_Characters/Maggie/Maggie_Endgame.png" id="1_6vkli"]
[ext_resource type="Script" uid="uid://dxmd8gnuuuyf0" path="res://scripts/NPCs/maggie_endgame.gd" id="1_dkopo"]
[ext_resource type="Texture2D" uid="uid://cfqcrnogt5vg5" path="res://assets/01_Sprites/05_Other/talk_icon.png" id="2_dkopo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dkopo"]
atlas = ExtResource("1_6vkli")
region = Rect2(576, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcjjj"]
atlas = ExtResource("1_6vkli")
region = Rect2(608, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej1eu"]
atlas = ExtResource("1_6vkli")
region = Rect2(640, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhrvd"]
atlas = ExtResource("1_6vkli")
region = Rect2(672, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypkah"]
atlas = ExtResource("1_6vkli")
region = Rect2(704, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dyoy"]
atlas = ExtResource("1_6vkli")
region = Rect2(736, 64, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qis5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkopo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcjjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej1eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhrvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypkah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dyoy")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dkopo"]
radius = 14.0
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pcjjj"]
radius = 28.0
height = 72.0

[node name="Maggie_Endgame" type="CharacterBody2D"]
script = ExtResource("1_dkopo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4qis5")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.926224

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_dkopo")

[node name="InteractZone" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/InteractZone"]
shape = SubResource("CapsuleShape2D_pcjjj")
debug_color = Color(1, 1, 0, 0.419608)

[node name="TalkIcon" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -23)
texture = ExtResource("2_dkopo")

[connection signal="body_entered" from="CollisionShape2D/InteractZone" to="." method="_on_interact_zone_body_entered"]
[connection signal="body_exited" from="CollisionShape2D/InteractZone" to="." method="_on_interact_zone_body_exited"]
